Wed Mar 14 16:10:30 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Changed the format of AdminConnection configuration section
	  in the server.  Added username of the admin to the format.
	  Affected files silcd/serverconfig.[ch].

	  Added silc_server_config_find_admin into silcd/serverconfig.[ch]
	  to return admin configuration data by host, username and/or
	  nickname.

Wed Mar 14 13:18:16 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Implemented WHOWAS command to the server.  Added the functions:

	  silc_server_command_whowas_parse,
	  silc_server_command_whowas_send_reply,
	  silc_server_command_whowas_from_client and
	  silc_server_command_whowas_from_server

	* Added <Client ID> argument to the WHOWAS command reply.  Updated
	  the protocol specs accordingly.

	* Implemented WHOWAS command and command_reply to the client
	  library.

	  Implemented the WHOWAS printing on the user interface.

Tue Mar 13 22:17:34 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added new argument to the WHOWAS command reply, the real name.
	  It is an optional argument.  Updated the protocol specs.

	* Added SilcIDCacheDestructor callback that is registered when
	  the SilcIDCache is allocated.  The callback is called when
	  an cache entry in the ID Cache expires, or is purged from the
	  cache.  Added into lib/silccore/idcache.[ch].

	  Added silc_idlist_client_destructor to the silcd/idlist.[ch]
	  to destruct the client entries when the cache entry expires.
	  Other ID Cache's in server and in the client library ignores
	  the destructor.

	* If the ID Cache entry's `expire' field is zero then the entry
	  never expires.  Added boolean `expire' argument to the
	  silc_idcache_add function in the lib/silccore/idcache.[ch].
	  If it is TRUE the default expiry value is used.

	* Added silc_server_free_client_data_timeout that is registered
	  when client disconnects.  By default for 5 minutes we preserve